[package]
name = "fps_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: REMOVE dynamic_linking BEFORE RELEASING A BUILD OF THE GAME
[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy_console = { path = "../bevy_console" }
bevy_rapier3d = "0.22.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
